k8/bigsi-aggregator-service/bigsi-aggregator-api-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bigsi-aggregator-api-deployment
  labels:
    app: bigsi-aggregator-api  
    tier: front    
spec:
  selector:
    matchLabels:
      app: bigsi-aggregator-api
  template:
    metadata:
      labels:
        app: bigsi-aggregator-api  
    spec:    
      containers:
      - name: bigsi-aggregator
        image: phelimb/bigsi-aggregator
        imagePullPolicy: Never
        command: ["/bin/sh"]
        args: ["-c","uwsgi --harakiri 300  --buffer-size=65535  --socket 0.0.0.0:8001 --protocol=http -w wsgi"]
        ports:
          - containerPort: 8001
