k8/bigsi-aggregator-service/bigsi-aggregator-worker-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bigsi-aggregator-worker
  labels:
    app: bigsi-aggregator-worker     
spec:
  selector:
    matchLabels:
      app: bigsi-aggregator-worker
  template:
    metadata:
      labels:
        app: bigsi-aggregator-worker  
    spec:                
      containers:
      - name: bigsi-aggregator-worker
        image: phelimb/bigsi-aggregator
        imagePullPolicy: Never
        command: ["celery"]
        args: ["-A", "bigsi_aggregator.celery", "worker","--concurrency=1"]
