k8/bigsi-aggregator-service/bigsi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bigsi-aggregator-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: bigsi-aggregator
          servicePort: 80
